--- a/Game.html
+++ b/Game.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
   </head>
-
+<body>
 <div class="col-lg-6 col-sm-6 col-md-12 col-xs-12">
    <div class="wrapper">
       <div class="game-details">
@@ -26,3 +26,4 @@
 </div>
   
 
+</body>
