--- a/game.html
+++ b/game.html
@@ -6,7 +6,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 <body>
 <div class="col-lg-6 col-sm-6 col-md-12 col-xs-12">
